# ns_prolificdreamer

./: README.md  pyproject.toml
prolificdreamer/config/: prolificdreamer_config.py
prolificdreamer/engine/: prolificdreamer_trainer.py
prolificdreamer/generative/: stable_diffusion_vsd.py
prolificdreamer/guidance/: stable_diffusion_vsd.py
prolificdreamer/models/: prolificdreamer_model.py
prolificdreamer/pipelines/: prolificdreamer_pipeline.py
